# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  conftest.py  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: build.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/apps/labels/: forms.py  models.py  urls.py  views.py
task_manager/apps/labels/fixtures/: labels_for_tests.json
task_manager/apps/labels/migrations/: 0001_initial.py  0002_label_created_at.py  0003_remove_label_tasks.py
task_manager/apps/statuses/: forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/fixtures/: statuses_for_tests.json
task_manager/apps/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/users/: forms.py  models.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  (+1 more)
task_manager/templates/: 404.html  500.html  base.html  home.html  index.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: base.html  confim_delete.html  flash.html  form.html  navbar.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/tests/: test_for_filters.py  test_statuses.py  test_tasks.py
tests/: test_for_filters.py  test_for_labels.py  test_users.py
(+12 files in other folders)
